ckad/depl-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    type: proxy-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      type: proxy-server
  template:
    metadata:
      labels:
        app: nginx
        type: proxy-server
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http-80
          protocol: TCP
