ckad/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox-1
  name: busybox-1
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - echo hello; sleep 3600
    image: busybox
    imagePullPolicy: IfNotPresent
    name: multi-busybox-1
    resources: {}
  - image: busybox
    imagePullPolicy: IfNotPresent
    name: multi-busybox-2
    resources: {}
    args:
      - /bin/sh
      - -c
      - echo hello; sleep 3600
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
