ckad/ingress-proto.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
   - host: hello-world.info 
     http:
      paths:
      - path: /api/(.*)
        backend:
          serviceName: svc-proto-user
          servicePort: 80
      - path: /admin/(.*)
        backend:
          serviceName: svc-proto-health
          servicePort: 80
